Stepable sign up

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,10 @@
  *= require_self
  */
 
+ body{
+     margin: 0px;
+ }
+
  div.body{
     margin: 0px;
     display: flex;
@@ -446,4 +450,323 @@ a.prof-nav-link{
 a.prof-nav-link:hover{
     background-color: #1da0f218;
     color: #1DA1F2;
+}
+
+div.form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 70px;
+}
+
+.first_step_form, .second_step_form, .third_step_form{
+    border-radius: 2%;
+    font-family: apple-system,BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    width: 600px;
+    height: 650px;
+    box-shadow: 0px 0px 1111px 2000px rgba(0,0,0,0.71);
+}
+
+.top-form.first-step{
+    margin-left: 260px;
+}
+
+.top-form{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 25px;
+    margin-right: 25px;
+    padding-top: 10px;
+}
+
+div.container{
+    position: relative;
+    margin-left: 30px;
+}
+
+h2, h4, p{
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.form_field{
+    width: 90%;
+    padding: 8px;
+    padding-bottom: 4px;
+    padding-top: 16px;
+    font-size: 16px;
+    color: black;
+    outline: none;
+    border: 2px solid lightgray;
+    height: 25px;
+    margin-bottom: 20px;
+}
+
+.form_field.bio{
+    height: 80px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.form_label{
+    position: absolute;
+    top: 3.5px;
+    left: 8px;
+    font-size: 13px;
+    color: gray;
+    pointer-events: none;
+    font-weight: 400;
+}
+
+.form_field:focus + .form_label{
+    color: #1DA1F2;
+}
+
+.form_label.confirm {
+    position: absolute;
+    top: 3.5px;
+    left: 8px;
+    font-size: 13px;
+    color: gray;
+}
+
+.form_field:focus{
+    border: none;
+    outline: 2px solid #1DA1F2;
+    height: 25px;
+    padding: 8px;
+    padding-bottom: 4px;
+    padding-top: 16px;
+}
+
+.form_field.bio:focus{
+    height: 60px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.form_field[value=""] + .form_label{
+    top: 12px;
+    left: 15px;
+    font-size: 20px;
+    color: gray;
+}
+
+.bio_label{
+    position: absolute;
+    top: 3.5px;
+    right: 45px;
+    font-size: 13px;
+    color: gray;
+    pointer-events: none;
+    font-weight: 400;
+}
+
+div.select-birthdate{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+div.container-birthdate{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    position: relative;
+    border: none;
+}
+
+.container-birthdate.month{
+    width: 40%;
+}
+
+.container-birthdate.day{
+    height: 10%;
+}
+
+.container-birthdate.year{
+    width: 30%;
+}
+
+.container-birthdate > span{
+    font-size: 13px;
+    color: gray;
+    position: absolute;
+    pointer-events: none;
+    top: 3.5px;
+    left: 8px;
+}
+
+.birthdate-selecter{
+    height: 65px;
+    padding: 10px;
+    outline: none;
+    border: 2px solid lightgray;
+}
+
+.fa.fa-twitter{
+    font-size: 35px;
+    color: #1DA1F2;
+}
+
+button, .button{
+    background-color: #1DA1F2;
+    color: white;
+    width: 55px;
+    border-radius: 9999px;
+    padding: 10px 32px;
+    border: 0;
+    display: flex;
+    font-weight: 550;
+    font-size: 15px;
+    justify-content: center;
+    cursor: pointer;
+}
+
+#next_confirm_button{
+    visibility: hidden;
+}
+
+#confirm_button{
+    width: 90%;
+    display: flex;
+    margin-left: 30px;
+}
+
+#sign_up_landing_page{
+    margin-bottom: 20px;
+}
+
+#sign_up_landing_page, #login_landing_page{
+    width: 45%;
+    height: 4%;
+    display: flex;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+#login_landing_page{
+    background-color: white;
+    border: 1px solid #1DA1F2;
+    color: #1DA1F2;
+}
+
+.profile_picture_button{
+    border-radius: 50%;
+    border: 3px solid gray;
+    margin: 80px auto;
+    background-size: 100% 100%;
+    overflow: hidden;
+    height: 200px;
+    width: 200px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+#profile_image{
+    background-size: 100% 100%;
+    width: 100%;
+}
+
+.fa.fa-camera{
+    position: absolute;
+    font-size: 20px;
+}
+
+.fa.fa-times.uploaded{
+    position: absolute;
+    font-size: 20px;
+    color: gray;
+}
+
+
+#file_input{
+    background-color: transparent;
+    margin-left: 55px;
+    color: transparent;
+    display: none;
+}
+
+.form_title{
+    margin: 19.920px 30px;
+}
+
+#private{
+    margin: 0px 30px;
+}
+
+#landing_page_background{
+    width: 649px;
+    height: 716px;
+}
+
+.top_landing_page{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.right_landing_page{
+    width: 60%;
+    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#landing_page_title{
+    font-size: 64px;
+}
+
+#landing_page_title, #landing_page_subtitle{
+    font-family: TwitterChirpExtendedHeavy, Verdana, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+}
+
+#landing_page_subtitle{
+    font-size: 31px;
+}
+
+.right_landing_page > .fa.fa-twitter {
+    font-size: 45px;
+}
+
+.footer{
+    font-family: Arial, Helvetica, sans-serif;
+    color: gray;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer_landing_page{
+    margin: 0px;
+}
+
+.back_landing_page{
+    color: gray;
+    background-color: white;
+    font-size: 20px;
+    font-weight: lighter;
+    padding: 0px;
+    display: flex; 
+    align-items: center;
+    width: 17px;
+}
+
+#uploaded_image{
+    background-size: 100%;
+    overflow: auto;
+}
+
+textarea {
+    resize: none;
+}
+
+#confirm_p{
+    margin-top: 80px;
 }
