Reduce, Reuse, Recycle

--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -1,24 +1,41 @@
-button, .button{
-    background-color: #1DA1F2;
-    color: white;
-    width: 55px;
+.contained_button, .outlined_button {
     border-radius: 9999px;
-    padding: 10px 32px;
-    border: 0;
-    display: flex;
+    padding: 1.5% 3.5%;
     font-weight: 550;
     font-size: 15px;
-    justify-content: center;
     cursor: pointer;
 }
 
-#next_confirm_button{
+.contained_button {
+    background-color: #1DA1F2;
+    color: white;
+    border: 0;
+}
+
+.outlined_button {
+    background-color: white;
+    color: #1DA1F2;
+    border: 1px solid #1DA1F2;
+}
+
+#sign_up_landing_page{
+    margin-bottom: 20px;
+}
+
+#sign_up_landing_page, #login_landing_page{
+    width: 50%;
+    height: 45px;
+    font-size: 16px;
+}
+
+.contained_button.confirm_next{
     visibility: hidden;
 }
 
-#confirm_button{
+.contained_button.confirm{
     width: 90%;
     display: flex;
+    justify-content: center;
     margin-left: 30px;
 }
 
@@ -52,8 +69,6 @@ button.like:hover, button.dislike:hover{
     color: red;
     border-radius: 50%;
     background-color: rgba(255, 0, 0, 0.123);
-    min-width: 25px;
-    min-height: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -79,8 +94,6 @@ button.retweet:hover, button.unretweete:hover{
     background-color: rgba(0, 128, 0, 0.123);
     color: green;
     border-radius: 50%;
-    min-width: 25px;
-    min-height: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -128,10 +141,30 @@ div.tweet-toolb-but a{
 
 div.tweet-toolb-but a:hover{
     background-color: #038fe6;
-    color: white;
-    border-radius: 9999px;
 }
 
-textarea {
-    resize: none;
+.icon_button{
+    color: #1DA1F2;
+    background-color: white;
+    font-size: 20px;
+    display: flex; 
+    align-items: center;
+    width: 6.5%;
+    border: none;
+    border-radius: 50%;
+    justify-content: center;
+}
+
+.icon_button.first{
+    visibility: hidden;
+}
+
+.icon_button:hover{
+    cursor: pointer;
+    background-color: #038fe628;
+}
+
+.contained_button[value=Next] > .form_field:invalid{
+    pointer-events: none;
+    border-color: red;
 }
