--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,19 +1,4 @@
-form.like-form{
-    max-width: 25px;
-    margin: 0px;
-}
-
-form.dislike-form{
-    margin: 0px;
-    max-width: 25px;
-}
-
-form.retweete-form{
-    max-width: 25px;
-    margin: 0px;
-}
-
-form.unretweete-form{
+form {
     max-width: 25px;
     margin: 0px;
 }
@@ -29,16 +14,12 @@ div.form {
     margin-top: 70px;
 }
 
-.first_step_form, .second_step_form, .third_step_form{
+.step_form{
     border-radius: 2%;
     font-family: apple-system,BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     width: 600px;
     height: 650px;
     box-shadow: 0px 0px 1111px 2000px rgba(0,0,0,0.71);
-}
-
-.top-form.first-step{
-    margin-left: 260px;
 }
 
 .top-form{
@@ -48,8 +29,4 @@ div.form {
     margin-left: 25px;
     margin-right: 25px;
     padding-top: 10px;
-}
-
-.form_title{
-    margin: 19.920px 30px;
 }
