--- a/app/assets/stylesheets/icons.scss
+++ b/app/assets/stylesheets/icons.scss
@@ -3,6 +3,11 @@
     color: #1DA1F2;
 }
 
+.fa.fa-twitter.login{
+    font-size: 45px;
+    margin-top: 15px;
+}
+
 .fa.fa-camera{
     position: absolute;
     font-size: 20px;
