--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -163,7 +163,7 @@ div.container{
     margin-left: 30px;
 }
 
-h2, h4, p{
+.step_form > h2, h4, p{
     margin-left: 30px;
     margin-right: 30px;
 }
@@ -188,4 +188,24 @@ h2, h4, p{
 
 #confirm_p{
     margin-top: 80px;
+}
+
+#login_container{
+    width: 350px;
+    margin: auto;
+    font-family: TwitterChirpExtendedHeavy, Verdana, -apple-system, 
+    BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+}
+
+.container.login{
+    margin-left: 0px;
+}
+
+#login_container > h2{
+    font-size: 27px;
+}
+
+#login_container > a{
+    font-size: 15px;
+    margin-left: 90px;
 }
