--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -164,7 +164,9 @@ div.tweet-toolb-but a:hover{
     background-color: #038fe628;
 }
 
-.contained_button[value=Next] > .form_field:invalid{
-    pointer-events: none;
-    border-color: red;
+.contained_button.login_submit{
+    width: 100%;
+    margin: 10px 0px 25px 0px;
+    height: 50px;
+    font-size: 17px;
 }
