Styling demo login

--- a/app/assets/stylesheets/icons.scss
+++ b/app/assets/stylesheets/icons.scss
@@ -6,6 +6,7 @@
 .fa.fa-twitter.login{
     font-size: 45px;
     margin-top: 15px;
+    align-self: center;
 }
 
 .fa.fa-camera{
@@ -17,4 +18,8 @@
     position: absolute;
     font-size: 20px;
     color: gray;
+}
+
+.navbar{
+    margin-right: 20px;
 }
