--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -170,3 +170,15 @@ div.tweet-toolb-but a:hover{
     height: 50px;
     font-size: 17px;
 }
+
+.icon_label_button{
+    width: auto;
+    height: 55px;
+    border-color: transparent;
+    border-radius: 9999px;
+    background-color: transparent;
+    padding-right: 20px;
+    padding-left: 15px;
+    margin: 7.5px 0px;
+    font-size: 20px;
+}
