--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -15,6 +15,8 @@ div.form {
 }
 
 .step_form{
+    display: flex;
+    flex-direction: column;
     border-radius: 2%;
     font-family: apple-system,BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     width: 600px;
