--- a/app/assets/stylesheets/inputFields.scss
+++ b/app/assets/stylesheets/inputFields.scss
@@ -44,6 +44,14 @@
     color: #1DA1F2;
 }
 
+.form_label.confirm {
+    position: absolute;
+    top: 3.5px;
+    left: 8px;
+    font-size: 13px;
+    color: gray;
+}
+
 .form_field[value=""] + .form_label{
     top: 12px;
     left: 15px;
@@ -108,8 +116,4 @@ div.container-birthdate{
     margin-left: 55px;
     color: transparent;
     display: none;
-}
-
-textarea {
-    resize: none;
 }
