--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -67,7 +67,7 @@ button.dislike{
     min-height: 25px;
 }
 
-button.retweet{
+button.retweet, button.comment, button.share{
     background-color: transparent;
     border: none;
     color: gray;
