--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -228,3 +228,10 @@ a{
     display: flex;
     flex-direction: column;
 }
+
+.nav{
+    display: flex;
+    flex-direction: column;
+    width: 10%;
+    padding-right: 20px;
+}
