--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -1,3 +1,25 @@
+button, .button{
+    background-color: #1DA1F2;
+    color: white;
+    width: 55px;
+    border-radius: 9999px;
+    padding: 10px 32px;
+    border: 0;
+    display: flex;
+    font-weight: 550;
+    font-size: 15px;
+    justify-content: center;
+    cursor: pointer;
+}
+
+#next_confirm_button{
+    visibility: hidden;
+}
+
+#confirm_button{
+    width: 90%;
+    display: flex;
+
 .contained_button, .outlined_button {
     border-radius: 9999px;
     padding: 1.5% 3.5%;
@@ -69,6 +91,8 @@ button.like:hover, button.dislike:hover{
     color: red;
     border-radius: 50%;
     background-color: rgba(255, 0, 0, 0.123);
+    min-width: 25px;
+    min-height: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -82,7 +106,7 @@ button.dislike{
     min-height: 25px;
 }
 
-button.retweet{
+button.retweet, button.comment, button.share{
     background-color: transparent;
     border: none;
     color: gray;
@@ -90,16 +114,18 @@ button.retweet{
     min-height: 25px;
 }
 
-button.retweet:hover, button.unretweete:hover{
+button.retweet:hover, button.unretweet:hover{
     background-color: rgba(0, 128, 0, 0.123);
     color: green;
     border-radius: 50%;
+    min-width: 25px;
+    min-height: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-button.unretweete{
+button.unretweet{
     background-color: transparent;
     color: green;
     border: none;
@@ -141,30 +167,10 @@ div.tweet-toolb-but a{
 
 div.tweet-toolb-but a:hover{
     background-color: #038fe6;
+    color: white;
+    border-radius: 9999px;
 }
 
-.icon_button{
-    color: #1DA1F2;
-    background-color: white;
-    font-size: 20px;
-    display: flex; 
-    align-items: center;
-    width: 6.5%;
-    border: none;
-    border-radius: 50%;
-    justify-content: center;
-}
-
-.icon_button.first{
-    visibility: hidden;
-}
-
-.icon_button:hover{
-    cursor: pointer;
-    background-color: #038fe628;
-}
-
-.contained_button[value=Next] > .form_field:invalid{
-    pointer-events: none;
-    border-color: red;
+textarea {
+    resize: none;
 }
